--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      localstack:
+        condition: service_healthy
     networks:
       - trailstory-network
     volumes:
@@ -30,6 +32,22 @@ services:
       - trailstory-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  localstack:
+    image: localstack/localstack:latest
+    container_name: localstack
+    ports:
+      - "4566:4566"
+    environment:
+      - SERVICES=s3
+      - AWS_DEFAULT_REGION=us-east-1
+    networks:
+      - trailstory-network
+    healthcheck:
+      test: ["CMD-SHELL", "awslocal s3 ls || exit 1"]
       interval: 5s
       timeout: 5s
       retries: 5
