[fix] updated .env.example

--- a/server/.env.example
+++ b/server/.env.example
@@ -9,9 +9,15 @@ DB_PASSWORD=password123
 DB_NAME=trailstory_db
 
 # Security
-ID_SALT=bookture-secret-salt-change-me
+ID_SALT=trailstory-secret-salt-change-me
 JWT_SECRET=your_secret_key
 
 # Storage
-STORAGE_DRIVER=local
+STORAGE_DRIVER=s3
 STORAGE_PATH=./uploads
+
+S3_ENDPOINT=http://localstack:4566
+S3_BUCKET=trailstory-media
+S3_REGION=us-east-1
+S3_ACCESS_KEY=test
+S3_SECRET_KEY=test
