--- a/server/.env.example
+++ b/server/.env.example
@@ -17,6 +17,7 @@ STORAGE_DRIVER=s3
 STORAGE_PATH=./uploads
 
 S3_ENDPOINT=http://localstack:4566
+S3_PUBLIC_URL=http://localhost:4566
 S3_BUCKET=trailstory-media
 S3_REGION=us-east-1
 S3_ACCESS_KEY=test
